<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingActivity"
    android:background="#BDF9FF">

    <TextView
        android:id="@+id/textViewInfo"
        android:layout_width="273dp"
        android:layout_height="89dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:freezesText="true"
        android:gravity="center"
        android:text="@string/info"
        android:textAllCaps="true"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:freezesText="true"
        android:gravity="center"
        android:text="@string/author"
        android:textAllCaps="true"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.547"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonBack2"
        app:layout_constraintVertical_bias="0.883" />

    <Button
        android:id="@+id/buttonBack2"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:background="#333D45"
        android:onClick="OnClickBack"
        android:text="@string/back"
        android:textColor="#dcdfe2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.36"
        app:layout_constraintStart_toEndOf="@+id/btnSave"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="24dp"
        android:background="#333D45"
        android:onClick="OnClickSave"
        android:text="@string/activitySave"
        android:textColor="#dcdfe2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="#edf7f5"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewQues">

        <TextView
            android:id="@+id/textViewActivityName"
            android:layout_width="38dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:freezesText="true"
            android:gravity="center"
            android:text="@string/activityName"
            android:textSize="15sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextActivityName"
            android:layout_width="164dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#333D45"
            android:ems="10"
            android:hint="@string/example"
            android:inputType="textPersonName"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="#edf7f5"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/textViewDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:freezesText="true"
            android:gravity="center"
            android:text="@string/activityDate"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/editTextDate"
            android:layout_width="164dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="OnClickDate"
            android:text="@string/instructionDate"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="#edf7f5"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <TextView
            android:id="@+id/textViewTime"
            android:layout_width="76dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:freezesText="true"
            android:gravity="center"
            android:text="@string/activityTime"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/editTextTime"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="OnClickTime"
            android:text="@string/instructionTime"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/textViewQues"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:freezesText="true"
        android:gravity="center"
        android:text="@string/ques"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewInfo" />
</android.support.constraint.ConstraintLayout>