<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BDF9FF"
    tools:context=".MainActivity">

    <RadioButton
        android:id="@+id/radioButtonMedicine"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="8dp"
        android:onClick="OnClickMedicine"
        android:text="@string/event1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLogo"
        android:textColor="#000000"
        android:textStyle="bold"
        android:textSize="18sp"/>

    <Button
        android:id="@+id/buttonReport"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="160dp"
        android:layout_marginBottom="20dp"
        android:background="#333D45"
        android:onClick="OnRecordClick"
        android:text="@string/record"
        android:textColor="#dcdfe2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioButtonMeditate"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonSetting"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="20dp"
        android:background="#333D45"
        android:onClick="OnSettingsClick"
        android:text="@string/settings"
        android:textColor="#dcdfe2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.242"
        app:layout_constraintStart_toEndOf="@+id/buttonReport"
        app:layout_constraintTop_toBottomOf="@+id/radioButtonMeditate"
        app:layout_constraintVertical_bias="0.0" />

    <RadioButton
        android:id="@+id/radioButtonRun"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:onClick="OnClickRun"
        android:text="@string/event2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioButtonMedicine"
        android:textColor="#000000"
        android:textStyle="bold"
        android:textSize="18sp"/>

    <RadioButton
        android:id="@+id/radioButtonMeditate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:onClick="OnClickMeditate"
        android:text="@string/event3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioButtonRun"
        android:textColor="#000000"
        android:textStyle="bold"
        android:textSize="18sp"/>

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="399dp"
        android:layout_height="91dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/logoName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

</android.support.constraint.ConstraintLayout>